# scs-common

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  aes.h  algoritms.h  color.cpp  color.h  errormessage.cpp  errormessage.h  hexcodec.cpp  hexcodec.h  ieee754.cpp  ieee754.h  tokenconverter.cpp  tokenconverter.h
tests/: CMakeLists.txt  main.cpp  test_color.cpp  test_errormessage.cpp  test_hexcodec.cpp  test_ieee754.cpp  test_tokenconverter.cpp
